# pnp-discord

./: .gitignore  Cargo.toml  readme.md  readme.norg
src/: cfg.rs  main.rs
src/commands/: meta.rs
