[package]
name = "pnp-discord"
version = "0.1.0"
edition = "2021"
authors = ["shift-d"]
description = "Discord bot for interacting with nvim-plugnplay database"
repository = "https://github.com/nvim-plugnplay/pnp-discord"
homepage = "https://github.com/nvim-plugnplay/pnp-discord"
license = "GPL-3.0"
include = ["src/*", "Cargo.*", "readme.md"]

[dependencies]
tracing = "0.1.32"
tracing-subscriber = "0.3.10"
serenity = "0.10.10"
config = "0.13.0"
tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
